# IA

./: README.md
PythonAI.dio/: README.md  README.md_TDD
PythonAI.dio/API/: .gitignore  README.md  REDEAME.md  alembic.ini  alembic.ini.1  docker-compose.yml  requirements.txt.1
PythonAI.dio/API/alembic/: env.py
PythonAI.dio/API_TDD/: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
PythonAI.dio/API_TDD/store/: .env  main.py  routers.py
PythonAI.dio/API_TDD/store/controllers/: __init__.py  product.py
PythonAI.dio/API_TDD/store/core/: config.py  exceptions.py
PythonAI.dio/API_TDD/store/db/: __init__.py  mongo.py
PythonAI.dio/API_TDD/store/models/: __init__.py  base.py  product.py
PythonAI.dio/API_TDD/store/schemas/: base.py  factories.py  product.py
PythonAI.dio/API_TDD/store/usecase/: __init__.py  product.py
PythonAI.dio/API_TDD/tests/: conftest.py  factories.py  test_product.py
PythonAI.dio/API_TDD/tests/controllers/: test_product.py  test_product.py.1
PythonAI.dio/API_TDD/tests/schemas/: __init__.py  test_product.py
PythonAI.dio/API_TDD/tests/usecases/: __init__.py  test_product.py
PythonAI.dio/bancoDados/: README.md  exemploTutorial.py  exemploTutorialonsulta.py  tutorial.db
PythonAI.dio/oo.python/: README.md  bicicleta.py  cachorro.py  conta_encapsulamento.py  controle_abstrato.py  estudante_instancia.py  gerador.py  heran_exemplo.txt  heranca_animal_multipla.py  heranca_veiculo_simples.py  mensagem_inner_function.py  passaro_polimorfismo.py  pessoa_estatico.py  pessoa_propiedades.py
(+31 files in other folders)
