[tool.poetry]
name = "api-tdd"
version = "0.1.0"
description = ""
authors = ["endobrasil <endobrasil@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "^0.111.0"
unicorn = "^2.0.1.post1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
motor = "^3.5.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
